added index.html with css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="mystyle.css">
     </head>
     <body>
-      <h1>Using CSS!</h1>
+      <h1>Using CSS</h1>
       <p>This webpage will use an external CSS file to add fonts and color!<br>For example, this paragraph is in the font family of georgia with an italic style. The title is in the font family helvetica!</p>
     </body>
 </html>
